Se actualizan los archivos

--- a/formulario.html
+++ b/formulario.html
@@ -83,13 +83,13 @@
                     <label for="">Como se entero de nosotros</label>
                 </td>
                 <td>
-                    <input type="checkbox" name="Web" id="Web">
+                    <input type="checkbox" name="Web" id="canal" class="checkbox">
                     <label for="">Web</label>
-                    <input type="checkbox" name="Web" id="Web">
+                    <input type="checkbox" name="Web" id="canal" class="checkbox">
                     <label for="">TV</label>
-                    <input type="checkbox" name="Web" id="Web">
+                    <input type="checkbox" name="Web" id="canal" class="checkbox">
                     <label for="">Redes Sociales</label>
-                    <input type="checkbox" name="Web" id="Web">
+                    <input type="checkbox" name="Web" id="canal" class="checkbox">
                     <label for="">Amigo</label>
                 </td>
             </tr>
